// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCardSelect is rendered 1`] = `
<button
  aria-checked="false"
  aria-label="aria-label"
  class="euiButton euiButton--text euiButton--fullWidth testClass1 testClass2 emotion-euiCardSelect"
  data-test-subj="test subject string"
  role="switch"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    >
      Select
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props can override color 1`] = `
<button
  aria-checked="false"
  class="euiButton euiButton--danger euiButton--fullWidth emotion-euiCardSelect"
  role="switch"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    >
      Select
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props can override text 1`] = `
<button
  aria-checked="false"
  class="euiButton euiButton--text euiButton--fullWidth emotion-euiCardSelect"
  role="switch"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    >
      Custom text
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props isDisabled 1`] = `
<button
  aria-checked="false"
  class="euiButton euiButton--text euiButton--fullWidth euiButton-isDisabled emotion-euiCardSelect"
  disabled=""
  role="switch"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    >
      Unavailable
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props isSelected 1`] = `
<button
  aria-checked="true"
  class="euiButton euiButton--success euiButton--fullWidth emotion-euiCardSelect"
  role="switch"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButtonContent__icon"
      color="inherit"
      data-euiicon-type="check"
    />
    <span
      class="euiButton__text"
    >
      Selected
    </span>
  </span>
</button>
`;
